add instructions to start animation

--- a/plant/index.html
+++ b/plant/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <div id="info">
-      A simple plant animation using CSS and JavaScript. There are no images nor
-      SVGs used. All the elements are created using CSS.
+      <p>
+        A simple plant animation using CSS and JavaScript. There are no images
+        nor SVGs used. All the elements are created using CSS.
+      </p>
+      <p>Click on the pot to see the plant grow.</p>
     </div>
 
     <div id="canvas">
